--- a/deep-learning.html
+++ b/deep-learning.html
@@ -179,7 +179,7 @@ Skills at Crisalix.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
+<h5><a href='https://jobs.lever.co/haydenai/13012c8f-dc71-479b-bd0c-9a0b3db2553d'>Hayden AI Technologies - Senior Research Scientist - Deep Learning</a></h5> 
 <p><span class="badge badge-light">San Francisco  San Francisco, California</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -288,7 +288,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/samsungssi/job/oJY4afwF'>Samsung Semiconductor, Inc. Careers - Deep Learning Theory Researcher/ Scientist Intern</a></h5> 
 <p><span class="badge badge-light">San Diego, California</span></p>
 <p>Posted on: 2019-09-26</p>
 <hr/>
@@ -304,7 +304,7 @@ with a?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-09-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
+<h5><a href='https://abbvie.referrals.selectminds.com/jobs/post-doctoral-fellow-in-deep-learning-11898'>Post-Doctoral Fellow in Deep Learning - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-23</p>
 <hr/>
@@ -440,7 +440,7 @@ learning to join the team at Thomson Reuters Labs in Zug. What do we do?</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/caper/jobs/4404507002'>Job Application for Deep Learning/CV Engineer at Caper</a></h5> 
+<h5><a href='https://boards.greenhouse.io/caper/jobs/4404507002'>Job Application for Deep Learning/CV Engineer at Caper</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>5 days ago ... About Us: Caper builds smart shopping carts powered by deep learning and 
 computer vision to enable a seamless grab-and-go retail experience. We differ 
@@ -508,7 +508,7 @@ QA?...</p>
 vision, speech processing and affective computing. We are interested in hiring a
 ?...</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://crisalix.workable.com/j/A785BD924B'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
+<h5><a href='https://crisalix.workable.com/j/A785BD924B'>Crisalix - Jobs: Senior iOS App Developer + Deep Learning Experience - relocation to Barcelona - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-08-13</p>
 <hr/>
