--- a/project-manager.html
+++ b/project-manager.html
@@ -40,12 +40,24 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://lewisham.referrals.selectminds.com/jobs/borough-of-sanctuary-programme-manager-997?et=1jnDhnQb'>Borough of Sanctuary Programme Manager - Lewisham Jobs Careers</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/JobTeaser/743999698352731-project-manager-btoc-belgium'>JobTeaser Project Manager BtoC Belgium | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/NorthgatePublicServices/743999698354533-project-manager-application-hosting'>Northgate Public Services Project Manager - Application Hosting | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://jobs.lever.co/yelp/e3b07897-95c2-4af2-b72e-c9cdfd541bbc'>Yelp - Program Manager, Integrated Marketing</a></h5> 
+<p><span class="badge badge-light">San Francisco, CA</span></p>
+<p>Posted on: 2019-10-29</p>
+<hr/>
+<h5><a href='https://lewisham.referrals.selectminds.com/jobs/borough-of-sanctuary-programme-manager-997?et=1jnDhnQb'>Borough of Sanctuary Programme Manager - Lewisham Jobs Careers</a></h5> 
+<p><span class="badge badge-light">London, United Kingdom London</span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
 <h5><a href='http://astcorporation.applytojob.com/apply/UhXVbwW6sn/ERP-Project-Manager-Oracle-Canada'>ERP Project Manager - Oracle (Canada) - Applications Software Technology LLC - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
 <h5><a href='https://aa067.referrals.selectminds.com/jobs/project-manager-marketing-%E2%80%93-campus-plan-2672'>Project Manager (Marketing ? Campus Plan) - City of Hope Careers</a></h5> 
@@ -74,7 +86,7 @@
 <p><span class="badge badge-light">M?nchen</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://beyli.recruitee.com/l/fr/o/digital-marketing-project-manager-wmd'>
+<h5><a href='https://beyli.recruitee.com/l/fr/o/digital-marketing-project-manager-wmd'>
       (Digital) Marketing Project Manager (w/m/d) - :beyli
     </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -142,11 +154,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/UwPnOnruyn/IT-Project-Manager'>IT Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
+<h5><a href='http://intellipro.applytojob.com/apply/UwPnOnruyn/IT-Project-Manager'>IT Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA  San Francisco, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://intellipro.applytojob.com/apply/44bHkkZPjZ/Senior-Project-Manager'>Senior Project Manager - IntelliPro Group Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light">Sunnyvale, CA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -212,7 +224,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/twilio/jobs/1927463'>Job Application for Program Manager, Talent Acquisition at Twilio</a></h5> 
 <p><span class="badge badge-light">Denver, CO</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -220,7 +232,7 @@
 <p><span class="badge badge-light">Pittsburgh</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.fitzii.com/job/44459?s=ft'>Project Manager | Thermal Systems</a></h5> 
+<h5><a href='https://www.fitzii.com/job/44459?s=ft'>Project Manager | Thermal Systems</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -262,7 +274,7 @@
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://abbvie.referrals.selectminds.com/jobs/senior-web-project-manager-12572'>Senior Web Project Manager - AbbVie Careers</a></h5> 
+<h5><a href='https://abbvie.referrals.selectminds.com/jobs/senior-web-project-manager-12572'>Senior Web Project Manager - AbbVie Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -322,7 +334,7 @@
 <p><span class="badge badge-light">Tennessee</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/hoar/job/oterbfw3'>Hoar Careers - Assistant Construction Project Manager / HPM</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hoar/job/oterbfw3'>Hoar Careers - Assistant Construction Project Manager / HPM</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -409,7 +421,7 @@ Manager to plan, drive and execute in-person premium multi-track events under?..
 <p><span class="badge badge-light">Chicago, Illinois  Minneapolis, Minnesota  Chicago Minneapolis</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.asd-usa.com/careers/security-project-manager/?utm_campaign=Hiring&utm_content=102223098&utm_medium=social&utm_source=twitter&hss_channel=tw-18273680'>Security Project Manager | ASD - Automated Systems Design</a></h5> 
+<h5><a href='https://www.asd-usa.com/careers/security-project-manager/?utm_campaign=Hiring&utm_content=102223098&utm_medium=social&utm_source=twitter&hss_channel=tw-18273680'>Security Project Manager | ASD - Automated Systems Design</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -445,18 +457,6 @@ product lines such as Adobe's Creative Cloud, Experience Cloud, and Document
 <hr/>
 <h5><a href='http://boxercraftinc.applytojob.com/apply/rLqV16Wva5/Project-Manager'>Project Manager - Boxercraft Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://www.icerecruit.com/job/190797/senior-project-manager/?TrackID=2194'>Senior Project Manager job with Conrad Consulting Ltd. | 190797</a></h5> 
-<p><span class="badge badge-light">London London</span></p>
-<p>Posted on:: 2019-10-28</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/kerauno/jobs/4495654002'>Job Application for Senior Implementation Project Manager at Kerauno</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-28</p>
-<hr/>
-<h5><a href='https://hologic.referrals.selectminds.com/jobs/field-installation-project-manager-ga-al-ms-tn-3027'>Field Installation Project Manager - GA, AL, MS, TN - Hologic Careers</a></h5> 
-<p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
 
